get checkin info by grade
